fix improper alignment of findbar

--- a/chrome/bar/findbar.css
+++ b/chrome/bar/findbar.css
@@ -100,6 +100,6 @@ findbar > .findbar-container {
   border-bottom-left-radius: 4px;
 }
 findbar {
-  margin-right: 650px;
+  margin-right: 300px;
   border-right: 1px solid var(--chrome-content-separator-color);
 }
